@@ -16,9 +16,15 @@
     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */
 
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+#include "services/server/ServerService.h"
+#include "services/DimeServices.h"
+
 #include "EntityListener.h"
 
-#include "services/DimeServices.h"
 
 namespace dime {
 
