@@ -2,7 +2,9 @@ INCLUDES = -I$(top_srcdir)/src
 
 bin_PROGRAMS = dime
 
-dime_LDADD = $(top_srcdir)/src/services/gui/libGuiService.a \
+dime_LDADD = \
+$(top_srcdir)/src/services/libServices.a \
+$(top_srcdir)/src/services/gui/libGuiService.a \
 $(top_srcdir)/src/services/gui/widget/libGuiServiceWidget.a \
 $(top_srcdir)/src/services/config/libConfigService.a \
 $(top_srcdir)/src/services/input/libInputService.a \
@@ -15,8 +17,7 @@ $(top_srcdir)/src/services/sound/libSoundService.a \
 $(top_srcdir)/test/libTestServices.a \
 $(top_srcdir)/src/services/datamodel/libDataModelService.a \
 $(top_srcdir)/src/services/logging/libLoggingService.a \
-$(top_srcdir)/src/framework/libFramework.a \
-$(top_srcdir)/src/services/libServices.a
+$(top_srcdir)/src/framework/libFramework.a 
 
 dime_SOURCES = Application.cpp Dime.cpp StateManager.cpp Application.h StateManager.h
 
