@@ -16,8 +16,13 @@
     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */
 
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
 #include "StateManager.h"
 #include "services/DimeServices.h"
+#include "services/gui/GuiService.h"
 #include "framework/Exception.h"
 
 // Get in LibXML2
